# lamlib

./: .gitignore  cdk.json  cdk_app.py  pyproject.toml
lambda-image/: Dockerfile  lambda_function.py  lamlib-0.1.0-py3-none-any.whl
src/lamlib/: __init__.py
